--- a/LangGraph/.env
+++ b/LangGraph/.env
@@ -1,2 +1,2 @@
-SERPER_API_KEY=""
-HUGGINGFACEHUB_API_TOKEN=""
+SERPER_API_KEY="b428d50a0e08a3ee935b311a69c5a89f41627624"
+HUGGINGFACEHUB_API_TOKEN="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"
