--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-SERPER_API_KEY=""
+SERPER_API_KEY="b428d50a0e08a3ee935b311a69c5a89f41627624"
 
-HUGGINGFACEHUB_API_TOKEN=""
+HUGGINGFACEHUB_API_TOKEN="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"
 
-NEWSAPI_KEY=""
+NEWSAPI_KEY="47345d5638834b0c8424a123e769d221"
 
-FACT_CHECK_API_KEY=""
+FACT_CHECK_API_KEY="AIzaSyAW44hennXw41_UJyRmosMYy6m2v9Opv4U"
