--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,12 +46,16 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "dompurify": "^3.2.4",
     "embla-carousel-react": "^8.3.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
-    "framer-motion": "^12.4.7",
+    "framer-motion": "^12.4.10",
     "input-otp": "^1.2.4",
+    "linkedom": "^0.18.9",
     "lucide-react": "^0.446.0",
+    "marked": "^15.0.7",
+    "net": "^1.0.2",
     "next": "13.5.1",
     "next-themes": "^0.3.0",
     "postcss": "8.4.30",
@@ -59,14 +63,19 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.53.0",
+    "react-hot-toast": "^2.5.2",
     "react-resizable-panels": "^2.1.3",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
+    "tls": "^0.0.1",
     "typescript": "5.2.2",
     "vaul": "^0.9.9",
     "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "fs": "0.0.1-security"
   }
 }
